refactor code UserService , UserController